fixed scrollbar issue

--- a/frontend2/css/portfolio.css
+++ b/frontend2/css/portfolio.css
@@ -14,6 +14,7 @@ body{
 header{
     max-width: 70%;
     margin: 0 auto;
+    height: 13vh;
 }
 
 h1 {
@@ -29,7 +30,7 @@ main{
     background-color: white;
     margin: 0 auto;
     padding: 20px 60px;
-    height: 75vh;
+    height: 74vh;
 }
 
 #contents-container{
@@ -66,6 +67,7 @@ footer{
     background-color: slategrey;
     padding: 40px;
     margin: 0 auto;
+    height: 13vh;
 }
 
 footer a, footer a:visited{
